--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>MQ-Diploma</title>
     <link rel="stylesheet" href="css\style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header class="noemi-header">
@@ -59,7 +60,7 @@
                             <a class="trends-tags-link" href="#">Interior</a>
                         </li>
                     </ul>
-                    <h2 class="trends-posts-name">Сейчас в тренде: сад на подоконнике</h2>
+                    <h4 class="trends-posts-name">Сейчас в тренде: сад на подоконнике</h4>
                 </div>
 
             </div>
@@ -71,7 +72,7 @@
                             <a class="trends-tags-link" href="#">Food</a>
                         </li>
                     </ul>
-                    <h2 class="trends-posts-name">Сыры на красивых картинках из интернета: какие они на вкус?</h2>
+                    <h4 class="trends-posts-name">Сыры на красивых картинках из интернета: какие они на вкус?</h4>
                 </div>
             </div>
             <div class="trends-content">
@@ -85,7 +86,7 @@
                             <a class="trends-tags-link" href="#">Travel</a>
                         </li>
                     </ul>
-                    <h2 class="trends-posts-name">Собираемся в первый поход в горы</h2>
+                    <h4 class="trends-posts-name">Собираемся в первый поход в горы</h4>
                 </div>
             </div>
             <div class="trends-content">
@@ -99,7 +100,7 @@
                             <a class="trends-tags-link" href="#">Health</a>
                         </li>
                     </ul>
-                    <h2 class="trends-posts-name">Сейчас в тренде: сколько витамина в лимонах?</h2>
+                    <h4 class="trends-posts-name">Сейчас в тренде: сколько витамина в лимонах?</h4>
                 </div>
             </div>
         </div>
@@ -382,7 +383,7 @@
                 </div>
                 <div class="shop-product-body">
                     <div class="shop-product-title">
-                        <h2 class="shop-product-name">Подушки на диван</h2>
+                        <h4 class="shop-product-name">Подушки на диван</h4>
                     </div>
                     <div class="shop-product-description">
                         <span class="shop-product-text">Набор из двух подушек с модными принтами. Видео о создании <a class="shop-product-text-link" href="#">здесь</a>.</span>
@@ -409,10 +410,10 @@
                 </div>
                 <div class="shop-product-body">
                     <div class="shop-product-title">
-                        <h2 class="shop-product-name">Кукла «Зайчик»</h2>
+                        <h4 class="shop-product-name">Кукла «Зайчик»</h4>
                     </div>
                     <div class="shop-product-description">
-                        <span class="shop-product-text">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="shop-product-text-link" href="#"> весенняя серия постов</a>в блоге и несколько подкастов.</span>
+                        <span class="shop-product-text">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="shop-product-text-link" href="#"> весенняя серия постов</a>  в блоге и несколько подкастов.</span>
                     </div>
                     <footer class="shop-product-bottom">
                         <div class="shop-product-prices">
@@ -432,7 +433,7 @@
                 </div>
                 <div class="shop-product-body">
                     <div class="shop-product-title">
-                        <h2 class="shop-product-name">Шестиугольная рамка</h2>
+                        <h4 class="shop-product-name">Шестиугольная рамка</h4>
                     </div>
                     <div class="shop-product-description">
                         <span class="shop-product-text">Необычная рамка для украшения дома из видео <a class="shop-product-text-link" href="#">«Как сделать рамку из подручных средств за 30 минут»</a>.</span>
