--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>MQ-Diploma</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -19,7 +19,7 @@
                         <div class="popup-question">
                             <label class="popup-label-how-often" for="how-often">Как часто вы заходите на сайт?</label>
                             <select id="how-often" class="popup-field-how-often" name="how-often" required>
-                                <option class="popup-options-how-often">Почти каждый день</option>
+                                <option class="popup-options-how-often" value="">Почти каждый день</option>
                                 <option class="popup-options-how-often">Раз в месяц</option>
                                 <option class="popup-options-how-often">Раз в неделю</option>
                                 <option class="popup-options-how-often">Где я?</option>
@@ -27,11 +27,11 @@
                         </div>
                         <div class="popup-question">
                             <div class="popup-question-title">
-                            <span class="popup-name">Вы подписаны на e-mail рассылку</span>
-                                </div>
+                                <span class="popup-name">Вы подписаны на e-mail рассылку?</span>
+                            </div>
                             <label class="popup-label-do-you-sign-up">
                                 <input class="popup-field-do-you-sign-up" type="radio" name="radio-group-do-you-sign-up">
-                                <span class="popup-text-do-you-sign-up"> Да</span>
+                                <span class="popup-text-do-you-sign-up">Да</span>
                             </label>
                             <label class="popup-label-do-you-sign-up">
                                 <input class="popup-field-do-you-sign-up" type="radio" name="radio-group-do-you-sign-up">
@@ -56,32 +56,32 @@
         <div class="header-content">
             <div class="header-logo">
                 <a href="#"> <img src="svg/noemi-logo.svg" class="header-img" alt="Лого NOEMI"></a>
-                    <nav class="menu">
-                        <button class="menu-button">
-                            <span class="menu-button-label">открыть меню</span>
-                        </button>
-                        <ul class="menu-list">
-                            <li class="menu-list-option">
-                                <a class="menu-link" href="#home">Главная</a>
-                            </li>
-                            <li class="menu-list-option">
-                                <a class="menu-link" href="#">Посты</a>
-                            </li>
-                            <li class="menu-list-option">
-                                <a class="menu-link" href="#">Статьи</a>
-                            </li>
-                            <li class="menu-list-option">
-                                <a class="menu-link" href="#">Теги</a>
-                            </li>
-                            <li class="menu-list-option">
-                                <a class="menu-link" href="#">Темы</a>
-                            </li>
-                            <li class="menu-list-option">
-                                <a class="menu-link" href="#">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>
-</div>
+                <nav class="menu">
+                    <button class="menu-button">
+                        <span class="menu-button-label">открыть меню</span>
+                    </button>
+                    <ul class="menu-list">
+                        <li class="menu-list-option">
+                            <a class="menu-link" href="#home">Главная</a>
+                        </li>
+                        <li class="menu-list-option">
+                            <a class="menu-link" href="#">Посты</a>
+                        </li>
+                        <li class="menu-list-option">
+                            <a class="menu-link" href="#">Статьи</a>
+                        </li>
+                        <li class="menu-list-option">
+                            <a class="menu-link" href="#">Теги</a>
+                        </li>
+                        <li class="menu-list-option">
+                            <a class="menu-link" href="#">Темы</a>
+                        </li>
+                        <li class="menu-list-option">
+                            <a class="menu-link" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
             <div class="header-title">
                 <h1 class="header-name">Блог о творчестве, спорте и образе жизни</h1>
             </div>
