--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
                             </div>
                             <label class="popup-label-do-you-sign-up">
                                 <input class="popup-field-do-you-sign-up" type="radio" name="radio-group-do-you-sign-up">
+                                <span class="popup-text-do-you-sign-up-hidden">Положительный ответ</span>
                                 <span class="popup-text-do-you-sign-up">Да</span>
                             </label>
                             <label class="popup-label-do-you-sign-up">
                                 <input class="popup-field-do-you-sign-up" type="radio" name="radio-group-do-you-sign-up">
+                                <span class="popup-text-do-you-sign-up-hidden">Отрицательный ответ</span>
                                 <span class="popup-text-do-you-sign-up">Нет</span>
                             </label>
                         </div>
